--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.2",
+    "lucide-vue-next": "^0.453.0",
     "nuxt": "^3.13.2",
+    "radix-vue": "^1.9.8",
+    "shadcn-nuxt": "^0.10.4",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.6.3",
     "vue": "latest",
     "vue-router": "latest"
   }
